compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT
    SAME
    TO

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LKEY V BEGIN SEMICOLON statement_list END SEMICOLON RKEY
Rule 2     V -> VAR content_var
Rule 3     V -> <empty>
Rule 4     content_var -> variable content_var
Rule 5     content_var -> variable
Rule 6     variable -> lista COLON INTEGER SEMICOLON
Rule 7     variable -> lista COLON REAL SEMICOLON
Rule 8     variable -> lista COLON STRING SEMICOLON
Rule 9     variable -> lista COLON CHARACTER SEMICOLON
Rule 10    variable -> lista COLON BOOLEAN SEMICOLON
Rule 11    variable -> ID COLON INTEGER SEMICOLON
Rule 12    variable -> ID COLON REAL SEMICOLON
Rule 13    variable -> ID COLON STRING SEMICOLON
Rule 14    variable -> ID COLON CHARACTER SEMICOLON
Rule 15    variable -> ID COLON BOOLEAN SEMICOLON
Rule 16    lista -> ID
Rule 17    lista -> ID COMMA lista
Rule 18    statement_list -> statement
Rule 19    statement_list -> statement_list statement
Rule 20    statement -> assignment_stmt SEMICOLON
Rule 21    statement -> expression_stmt SEMICOLON
Rule 22    statement -> if_stmt
Rule 23    statement -> while_stmt
Rule 24    statement -> for_stmt
Rule 25    statement -> write_stmt SEMICOLON
Rule 26    statement -> change SEMICOLON
Rule 27    write_stmt -> WRITE LPAREN factor RPAREN
Rule 28    write_stmt -> WRITE LPAREN expression RPAREN
Rule 29    write_stmt -> WRITE LPAREN expression_string RPAREN
Rule 30    write_stmt -> WRITE LPAREN expression_bool RPAREN
Rule 31    expression_stmt -> expression
Rule 32    expression_stmt -> expression_bool
Rule 33    assignment_stmt -> ID ASSIGN expression
Rule 34    assignment_stmt -> ID ASSIGN expression_bool
Rule 35    assignment_stmt -> ID ASSIGN expression_string
Rule 36    expression_string -> expression_string PLUS STR_value
Rule 37    expression_string -> STR_value
Rule 38    STR_value -> STR
Rule 39    if_stmt -> IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY
Rule 40    if_stmt -> IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY ELSE LKEY statement_list RKEY
Rule 41    while_stmt -> WHILE LPAREN expression_bool RPAREN DO LKEY statement_list RKEY
Rule 42    for_stmt -> FOR LPAREN assignment_stmt SEMICOLON expression_bool SEMICOLON change RPAREN LKEY statement_list RKEY
Rule 43    expression_bool -> expression_bool AND comparation
Rule 44    expression_bool -> expression_bool OR comparation
Rule 45    expression_bool -> comparation
Rule 46    comparation -> expression GREATER expression
Rule 47    comparation -> expression GREATER_EQUAL expression
Rule 48    comparation -> expression LESS expression
Rule 49    comparation -> expression LESS_EQUAL expression
Rule 50    comparation -> expression DIFFERENT expression
Rule 51    comparation -> expression EQUALS expression
Rule 52    comparation -> factor_bool
Rule 53    factor_bool -> LPAREN expression_bool RPAREN
Rule 54    factor_bool -> BOOL
Rule 55    expression -> expression PLUS term
Rule 56    expression -> expression MINUS term
Rule 57    expression -> term
Rule 58    term -> term MOD factor
Rule 59    term -> term TIMES factor
Rule 60    term -> term DIVIDE factor
Rule 61    term -> factor
Rule 62    factor -> LPAREN expression RPAREN
Rule 63    factor -> INT
Rule 64    factor -> FLOAT
Rule 65    factor -> ID
Rule 66    change -> ID INCREMENT
Rule 67    change -> ID DECREMENT

Terminals, with rules where they appear

AND                  : 43
ASSIGN               : 33 34 35
BEGIN                : 1
BOOL                 : 54
BOOLEAN              : 10 15
CHARACTER            : 9 14
COLON                : 6 7 8 9 10 11 12 13 14 15
COMMA                : 17
DECREMENT            : 67
DIFFERENT            : 50
DIVIDE               : 60
DO                   : 41
ELSE                 : 40
END                  : 1
EQUALS               : 51
FLOAT                : 64
FOR                  : 42
GREATER              : 46
GREATER_EQUAL        : 47
ID                   : 1 11 12 13 14 15 16 17 33 34 35 65 66 67
IF                   : 39 40
INCREMENT            : 66
INT                  : 63
INTEGER              : 6 11
LESS                 : 48
LESS_EQUAL           : 49
LKEY                 : 1 39 40 40 41 42
LPAREN               : 27 28 29 30 39 40 41 42 53 62
MINUS                : 56
MOD                  : 58
NOT                  : 
OR                   : 44
PLUS                 : 36 55
PROGRAM              : 1
REAL                 : 7 12
RKEY                 : 1 39 40 40 41 42
RPAREN               : 27 28 29 30 39 40 41 42 53 62
SAME                 : 
SEMICOLON            : 1 1 6 7 8 9 10 11 12 13 14 15 20 21 25 26 42 42
STR                  : 38
STRING               : 8 13
THEN                 : 39 40
TIMES                : 59
TO                   : 
VAR                  : 2
WHILE                : 41
WRITE                : 27 28 29 30
error                : 

Nonterminals, with rules where they appear

STR_value            : 36 37
V                    : 1
assignment_stmt      : 20 42
change               : 26 42
comparation          : 43 44 45
content_var          : 2 4
expression           : 28 31 33 46 46 47 47 48 48 49 49 50 50 51 51 55 56 62
expression_bool      : 30 32 34 39 40 41 42 43 44 53
expression_stmt      : 21
expression_string    : 29 35 36
factor               : 27 58 59 60 61
factor_bool          : 52
for_stmt             : 24
if_stmt              : 22
lista                : 6 7 8 9 10 17
program              : 0
statement            : 18 19
statement_list       : 1 19 39 40 40 41 42
term                 : 55 56 57 58 59 60
variable             : 4 5
while_stmt           : 23
write_stmt           : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LKEY V BEGIN SEMICOLON statement_list END SEMICOLON RKEY

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LKEY V BEGIN SEMICOLON statement_list END SEMICOLON RKEY

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LKEY V BEGIN SEMICOLON statement_list END SEMICOLON RKEY

    LKEY            shift and go to state 4


state 4

    (1) program -> PROGRAM ID LKEY . V BEGIN SEMICOLON statement_list END SEMICOLON RKEY
    (2) V -> . VAR content_var
    (3) V -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 3 (V -> .)

    V                              shift and go to state 5

state 5

    (1) program -> PROGRAM ID LKEY V . BEGIN SEMICOLON statement_list END SEMICOLON RKEY

    BEGIN           shift and go to state 7


state 6

    (2) V -> VAR . content_var
    (4) content_var -> . variable content_var
    (5) content_var -> . variable
    (6) variable -> . lista COLON INTEGER SEMICOLON
    (7) variable -> . lista COLON REAL SEMICOLON
    (8) variable -> . lista COLON STRING SEMICOLON
    (9) variable -> . lista COLON CHARACTER SEMICOLON
    (10) variable -> . lista COLON BOOLEAN SEMICOLON
    (11) variable -> . ID COLON INTEGER SEMICOLON
    (12) variable -> . ID COLON REAL SEMICOLON
    (13) variable -> . ID COLON STRING SEMICOLON
    (14) variable -> . ID COLON CHARACTER SEMICOLON
    (15) variable -> . ID COLON BOOLEAN SEMICOLON
    (16) lista -> . ID
    (17) lista -> . ID COMMA lista

    ID              shift and go to state 11

    content_var                    shift and go to state 8
    variable                       shift and go to state 9
    lista                          shift and go to state 10

state 7

    (1) program -> PROGRAM ID LKEY V BEGIN . SEMICOLON statement_list END SEMICOLON RKEY

    SEMICOLON       shift and go to state 12


state 8

    (2) V -> VAR content_var .

    BEGIN           reduce using rule 2 (V -> VAR content_var .)


state 9

    (4) content_var -> variable . content_var
    (5) content_var -> variable .
    (4) content_var -> . variable content_var
    (5) content_var -> . variable
    (6) variable -> . lista COLON INTEGER SEMICOLON
    (7) variable -> . lista COLON REAL SEMICOLON
    (8) variable -> . lista COLON STRING SEMICOLON
    (9) variable -> . lista COLON CHARACTER SEMICOLON
    (10) variable -> . lista COLON BOOLEAN SEMICOLON
    (11) variable -> . ID COLON INTEGER SEMICOLON
    (12) variable -> . ID COLON REAL SEMICOLON
    (13) variable -> . ID COLON STRING SEMICOLON
    (14) variable -> . ID COLON CHARACTER SEMICOLON
    (15) variable -> . ID COLON BOOLEAN SEMICOLON
    (16) lista -> . ID
    (17) lista -> . ID COMMA lista

    BEGIN           reduce using rule 5 (content_var -> variable .)
    ID              shift and go to state 11

    variable                       shift and go to state 9
    content_var                    shift and go to state 13
    lista                          shift and go to state 10

state 10

    (6) variable -> lista . COLON INTEGER SEMICOLON
    (7) variable -> lista . COLON REAL SEMICOLON
    (8) variable -> lista . COLON STRING SEMICOLON
    (9) variable -> lista . COLON CHARACTER SEMICOLON
    (10) variable -> lista . COLON BOOLEAN SEMICOLON

    COLON           shift and go to state 14


state 11

    (11) variable -> ID . COLON INTEGER SEMICOLON
    (12) variable -> ID . COLON REAL SEMICOLON
    (13) variable -> ID . COLON STRING SEMICOLON
    (14) variable -> ID . COLON CHARACTER SEMICOLON
    (15) variable -> ID . COLON BOOLEAN SEMICOLON
    (16) lista -> ID .
    (17) lista -> ID . COMMA lista

  ! shift/reduce conflict for COLON resolved as shift
    COLON           shift and go to state 15
    COMMA           shift and go to state 16

  ! COLON           [ reduce using rule 16 (lista -> ID .) ]


state 12

    (1) program -> PROGRAM ID LKEY V BEGIN SEMICOLON . statement_list END SEMICOLON RKEY
    (18) statement_list -> . statement
    (19) statement_list -> . statement_list statement
    (20) statement -> . assignment_stmt SEMICOLON
    (21) statement -> . expression_stmt SEMICOLON
    (22) statement -> . if_stmt
    (23) statement -> . while_stmt
    (24) statement -> . for_stmt
    (25) statement -> . write_stmt SEMICOLON
    (26) statement -> . change SEMICOLON
    (33) assignment_stmt -> . ID ASSIGN expression
    (34) assignment_stmt -> . ID ASSIGN expression_bool
    (35) assignment_stmt -> . ID ASSIGN expression_string
    (31) expression_stmt -> . expression
    (32) expression_stmt -> . expression_bool
    (39) if_stmt -> . IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY
    (40) if_stmt -> . IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY ELSE LKEY statement_list RKEY
    (41) while_stmt -> . WHILE LPAREN expression_bool RPAREN DO LKEY statement_list RKEY
    (42) for_stmt -> . FOR LPAREN assignment_stmt SEMICOLON expression_bool SEMICOLON change RPAREN LKEY statement_list RKEY
    (27) write_stmt -> . WRITE LPAREN factor RPAREN
    (28) write_stmt -> . WRITE LPAREN expression RPAREN
    (29) write_stmt -> . WRITE LPAREN expression_string RPAREN
    (30) write_stmt -> . WRITE LPAREN expression_bool RPAREN
    (66) change -> . ID INCREMENT
    (67) change -> . ID DECREMENT
    (55) expression -> . expression PLUS term
    (56) expression -> . expression MINUS term
    (57) expression -> . term
    (43) expression_bool -> . expression_bool AND comparation
    (44) expression_bool -> . expression_bool OR comparation
    (45) expression_bool -> . comparation
    (58) term -> . term MOD factor
    (59) term -> . term TIMES factor
    (60) term -> . term DIVIDE factor
    (61) term -> . factor
    (46) comparation -> . expression GREATER expression
    (47) comparation -> . expression GREATER_EQUAL expression
    (48) comparation -> . expression LESS expression
    (49) comparation -> . expression LESS_EQUAL expression
    (50) comparation -> . expression DIFFERENT expression
    (51) comparation -> . expression EQUALS expression
    (52) comparation -> . factor_bool
    (62) factor -> . LPAREN expression RPAREN
    (63) factor -> . INT
    (64) factor -> . FLOAT
    (65) factor -> . ID
    (53) factor_bool -> . LPAREN expression_bool RPAREN
    (54) factor_bool -> . BOOL

    ID              shift and go to state 17
    IF              shift and go to state 29
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    WRITE           shift and go to state 33
    LPAREN          shift and go to state 30
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    BOOL            shift and go to state 40

    statement_list                 shift and go to state 18
    statement                      shift and go to state 19
    assignment_stmt                shift and go to state 20
    expression_stmt                shift and go to state 21
    if_stmt                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    write_stmt                     shift and go to state 25
    change                         shift and go to state 26
    expression                     shift and go to state 27
    expression_bool                shift and go to state 28
    factor                         shift and go to state 34
    term                           shift and go to state 35
    comparation                    shift and go to state 36
    factor_bool                    shift and go to state 37

state 13

    (4) content_var -> variable content_var .

    BEGIN           reduce using rule 4 (content_var -> variable content_var .)


state 14

    (6) variable -> lista COLON . INTEGER SEMICOLON
    (7) variable -> lista COLON . REAL SEMICOLON
    (8) variable -> lista COLON . STRING SEMICOLON
    (9) variable -> lista COLON . CHARACTER SEMICOLON
    (10) variable -> lista COLON . BOOLEAN SEMICOLON

    INTEGER         shift and go to state 41
    REAL            shift and go to state 42
    STRING          shift and go to state 43
    CHARACTER       shift and go to state 44
    BOOLEAN         shift and go to state 45


state 15

    (11) variable -> ID COLON . INTEGER SEMICOLON
    (12) variable -> ID COLON . REAL SEMICOLON
    (13) variable -> ID COLON . STRING SEMICOLON
    (14) variable -> ID COLON . CHARACTER SEMICOLON
    (15) variable -> ID COLON . BOOLEAN SEMICOLON

    INTEGER         shift and go to state 46
    REAL            shift and go to state 47
    STRING          shift and go to state 48
    CHARACTER       shift and go to state 49
    BOOLEAN         shift and go to state 50


state 16

    (17) lista -> ID COMMA . lista
    (16) lista -> . ID
    (17) lista -> . ID COMMA lista

    ID              shift and go to state 51

    lista                          shift and go to state 52

state 17

    (33) assignment_stmt -> ID . ASSIGN expression
    (34) assignment_stmt -> ID . ASSIGN expression_bool
    (35) assignment_stmt -> ID . ASSIGN expression_string
    (66) change -> ID . INCREMENT
    (67) change -> ID . DECREMENT
    (65) factor -> ID .

    ASSIGN          shift and go to state 53
    INCREMENT       shift and go to state 54
    DECREMENT       shift and go to state 55
    MOD             reduce using rule 65 (factor -> ID .)
    TIMES           reduce using rule 65 (factor -> ID .)
    DIVIDE          reduce using rule 65 (factor -> ID .)
    PLUS            reduce using rule 65 (factor -> ID .)
    MINUS           reduce using rule 65 (factor -> ID .)
    GREATER         reduce using rule 65 (factor -> ID .)
    GREATER_EQUAL   reduce using rule 65 (factor -> ID .)
    LESS            reduce using rule 65 (factor -> ID .)
    LESS_EQUAL      reduce using rule 65 (factor -> ID .)
    DIFFERENT       reduce using rule 65 (factor -> ID .)
    EQUALS          reduce using rule 65 (factor -> ID .)
    SEMICOLON       reduce using rule 65 (factor -> ID .)


state 18

    (1) program -> PROGRAM ID LKEY V BEGIN SEMICOLON statement_list . END SEMICOLON RKEY
    (19) statement_list -> statement_list . statement
    (20) statement -> . assignment_stmt SEMICOLON
    (21) statement -> . expression_stmt SEMICOLON
    (22) statement -> . if_stmt
    (23) statement -> . while_stmt
    (24) statement -> . for_stmt
    (25) statement -> . write_stmt SEMICOLON
    (26) statement -> . change SEMICOLON
    (33) assignment_stmt -> . ID ASSIGN expression
    (34) assignment_stmt -> . ID ASSIGN expression_bool
    (35) assignment_stmt -> . ID ASSIGN expression_string
    (31) expression_stmt -> . expression
    (32) expression_stmt -> . expression_bool
    (39) if_stmt -> . IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY
    (40) if_stmt -> . IF LPAREN expression_bool RPAREN THEN LKEY statement_list RKEY ELSE LKEY statement_list RKEY
    (41) while_stmt -> . WHILE LPAREN expression_bool RPAREN DO LKEY statement_list RKEY
    (42) for_stmt -> . FOR LPAREN assignment_stmt SEMICOLON expression_bool SEMICOLON change RPAREN LKEY statement_list RKEY
    (27) write_stmt -> . WRITE LPAREN factor RPAREN
    (28) write_stmt -> . WRITE LPAREN expression RPAREN
    (29) write_stmt -> . WRITE LPAREN expression_string RPAREN
    (30) write_stmt -> . WRITE LPAREN expression_bool RPAREN
    (66) change -> . ID INCREMENT
    (67) change -> . ID DECREMENT
    (55) expression -> . expression PLUS term
    (56) expression -> . expression MINUS term
    (57) expression -> . term
    (43) expression_bool -> . expression_bool AND comparation
    (44) expression_bool -> . expression_bool OR comparation
    (45) expression_bool -> . comparation
    (58) term -> . term MOD factor
    (59) term -> . term TIMES factor
    (60) term -> . term DIVIDE factor
    (61) term -> . factor
    (46) comparation -> . expression GREATER expression
    (47) comparation -> . expression GREATER_EQUAL expression
    (48) comparation -> . expression LESS expression
    (49) comparation -> . expression LESS_EQUAL expression
    (50) comparation -> . expression DIFFERENT expression
    (51) comparation -> . expression EQUALS expression
    (52) comparation -> . factor_bool
    (62) factor -> . LPAREN expression RPAREN
    (63) factor -> . INT
    (64) factor -> . FLOAT
    (65) factor -> . ID
    (53) factor_bool -> . LPAREN expression_bool RPAREN
    (54) factor_bool -> . BOOL

    END             shift and go to state 56
    ID              shift and go to state 17
    IF              shift and go to state 29
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    WRITE           shift and go to state 33
    LPAREN          shift and go to state 30
    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    BOOL            shift and go to state 40

    statement                      shift and go to state 57
    assignment_stmt                shift and go to state 20
    expression_stmt                shift and go to state 21
    if_stmt                        shift and go to state 22
    while_stmt                     shift and go to state 23
    for_stmt                       shift and go to state 24
    write_stmt                     shift and go to state 25
    change                         shift and go to state 26
    expression                     shift and go to state 27
    expression_bool                shift and go to state 28
    factor                         shift and go to state 34
    term                           shift and go to state 35
    comparation                    shift and go to state 36
    factor_bool                    shift and go to state 37

state 19

    (18) statement_list -> statement .

    END             reduce using rule 18 (statement_list -> statement .)
    ID              reduce using rule 18 (statement_list -> statement .)
    IF              reduce using rule 18 (statement_list -> statement .)
    WHILE           reduce using rule 18 (statement_list -> statement .)
    FOR             reduce using rule 18 (statement_list -> statement .)
    WRITE           reduce using rule 18 (statement_list -> statement .)
    LPAREN          reduce using rule 18 (statement_list -> statement .)
    INT             reduce using rule 18 (statement_list -> statement .)
    FLOAT           reduce using rule 18 (statement_list -> statement .)
    BOOL            reduce using rule 18 (statement_list -> statement .)
    RKEY            reduce using rule 18 (statement_list -> statement .)


state 20

    (20) statement -> assignment_stmt . SEMICOLON

    SEMICOLON       shift and go to state 58


state 21

    (21) statement -> expression_stmt . SEMICOLON

    SEMICOLON       shift and go to state 59


state 22

    (22) statement -> if_stmt .

    END             reduce using rule 22 (statement -> if_stmt .)
    ID              reduce using rule 22 (statement -> if_stmt .)
    IF              reduce using rule 22 (statement -> if_stmt .)
    WHILE           reduce using rule 22 (statement -> if_stmt .)
    FOR             reduce using rule 22 (statement -> if_stmt .)
    WRITE           reduce using rule 22 (statement -> if_stmt .)
    LPAREN          reduce using rule 22 (statement -> if_stmt .)
